# VoidNetwork

./: DEMO.md  README.md  Readme.md  pyproject.toml
config/: network.json  router_1.json  student_a.json  student_b.json
examples/: class_photo.txt  notes.txt
internet_sim/: __init__.py  cli.py  config.py  logging_utils.py  network.py  packet.py  protocols.py
internet_simulator/: Alinotes.txt  DEMO_GUIDE.md  FILE_TRANSFER_TEST.py  MULTI_TERMINAL_TEST.py  ROUTER_TEST.py  TEST_RESULTS.md  WORKING_FILE_TRANSFER_TEST.py  WORKING_UDP_TEST.py  cli.py  debug_udp.py  main.py  node_registry.json  notes.txt  shared_registry.py  simple_udp_test.py  single_terminal_test.py  start_simulation.bat  test_file.txt
internet_simulator/configs/: ali.json  bella.json  network1_client.json  network2_client.json  rihaba.json  router.json  router_dual_network.json  router_dual_network_fixed.json  user.json
internet_simulator/core/: client.py  node.py  packet.py  router.py
internet_simulator/protocols/: arp.py  ip.py  tcp.py  udp.py
internet_simulator/utils/: config_loader.py  logger.py
tests/: test_config.py  test_packet.py  test_routing.py
