[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internet-simulator"
version = "0.1.0"
description = "Interactive internet simulator for classroom networking demos"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["internet_sim"]
